# cidade_ibge_tom

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
cidade_ibge_tom/: cidade.py
tests/: test_cidade.py
