[tool.poetry]
name = "cidade_ibge_tom"
version = "0.1.1"
description = "Informações da Cidade pelo IBGE ou TOM"
license = "MIT"
readme = "README.md"
authors = ["Leonardo Gregianin <leogregianin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
mypy = "^0.971"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
